# Aegis

./: .gitignore  AI_RULES.md  Onboarding.md  README.md
backend/: main.py  pyproject.toml
backend/core/: __init__.py  database.py  ollama_client.py  queue_engine.py  runtime_config.py
backend/hardware/: __init__.py  apple_silicon.py  cpu_fallback.py  model_registry.py  nvidia.py  registry.py
backend/models/: __init__.py  job.py  schemas.py
backend/tests/: test_cancel_queued.py  test_migrations.py  test_model_registry.py  test_queue_reservations.py  test_runtime_config.py  test_startup_recovery.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: ConcurrencyStatus.tsx  JobQueueTable.tsx  LoadedModelCard.tsx  MemoryPressureChart.tsx  ModelRegistryTable.tsx  ThroughputStats.tsx
dashboard/src/lib/: api.ts
scripts/: no_aegis_test.sh  stress_test.sh  v2_profile_run.sh  v2_validation.sh
